# TopDown_Shooter_INT2215_SDL3

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  game_proj.sln  game_proj.vcxproj  game_proj.vcxproj.filters
.github/workflows/: main.yml
src/: Bullet.cpp  Button.cpp  CMakeLists.txt  Enemy.cpp  Entity.cpp  Game.cpp  MainMenu.cpp  Player.cpp  ScoreText.cpp  UI.cpp  bullet.h  button.h  constant.h  enemy.h  entity.h  game.h  gamestate.h  linkedlist.h  main.cpp  mainmenu.h  player.h  scoretext.h  ui.h
src/Game/: AudioManager.cpp  Bullet.cpp  Enemy.cpp  Entity.cpp  Game.cpp  Map.cpp  Player.cpp  Tree.cpp
src/UI/: Button.cpp  GameOver.cpp  MainMenu.cpp  Slider.cpp  UI.cpp
src/include/: audiomanager.h  bullet.h  button.h  constant.h  enemy.h  entity.h  game.h  gameover.h  gamestate.h  linkedlist.h  mainmenu.h  map.h  player.h  scoretext.h  slider.h  tree.h  ui.h
